welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: '=>' expected but ',' found.
  																																					case 6,true => return "off"
                                                                                                                                                                                                                                                                                                              ^alarmClock:3: error: '=>' expected but ',' found.
  																																					case 0,true => return "off"
                                                                                                                                                                                                                                                                                                              ^alarmClock:4: error: '=>' expected but ',' found.
  																																					case _,true => return "10.00"
                                                                                                                                                                                                                                                                                                              ^alarmClock:5: error: '=>' expected but ',' found.
  																																					case 6,_ => return "10:00"
                                                                                                                                                                                                                                                                                                              ^alarmClock:6: error: '=>' expected but ',' found.
  																																					case 0,_ => return "10:00"
                                                                                                                                                                                                                                                                                                              ^alarmClock:7: error: '=>' expected but ',' found.
  case _,_ => return "7:00"}
        ^