welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = { (day,vacation) match{
  																																					case 6,true => return "off"
  																																					case 0,true => return "off"
  																																					case _,true => return "10.00"
  																																					case 6,_ => return "10:00"
  																																					case 0,_ => return "10:00"
  case _,_ => return "7:00"}
}